--- a/packages/frontend/src/features/Footer/index.module.css
+++ b/packages/frontend/src/features/Footer/index.module.css
@@ -4,7 +4,7 @@
 
     background-color: var(--site-colour-secondary, rgb(255, 236, 218));
 
-    width: calc(var(--vw) * 100);
+    width: min(calc(var(--vw) * 100), 100%);
 }
 
 .footer-width-controller {
@@ -14,7 +14,8 @@
     flex-direction: column;
     gap: 32px;
 
-    width: min(calc(var(--vw) * 100), 1280px);
+    width: min(calc(var(--vw) * 100), 100%);
+    max-width: 1280px;
     height: 100%;
     padding: 32px 16px;
 
