--- a/packages/frontend/src/features/Header/index.module.css
+++ b/packages/frontend/src/features/Header/index.module.css
@@ -5,7 +5,7 @@
 
     background-color: var(--site-colour-secondary, rgb(255, 236, 218));
 
-    width: 100%;
+    width: min(calc(var(--vw) * 100), 100%);
     height: min-content;
 
     transition: transform 0.2s cubic-bezier(0.3, 0, 0.01, 1.02);
@@ -19,7 +19,7 @@
 }
 
 .header-width-controller {
-    width: 100%;
+    width: min(calc(var(--vw) * 100), 100%);
     max-width: 1280px;
     padding: 16px;
     margin: auto;
