--- a/packages/frontend/src/features/ProductHero/index.module.css
+++ b/packages/frontend/src/features/ProductHero/index.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
 
-    width: calc(var(--vw) * 100);
+    width: min(calc(var(--vw) * 100), 100%);
     padding: 32px 0px;
 }
 
@@ -14,8 +14,8 @@
     align-items: start;
     gap: 16px;
 
-    width: min(calc(var(--vw) * 100), 1280px);
-    max-width: 100%;
+    width: min(calc(var(--vw) * 100), 100%);
+    max-width: 1280px;
     padding: 0px;
     margin: auto;
 
