--- a/packages/frontend/src/features/ProductList/index.module.css
+++ b/packages/frontend/src/features/ProductList/index.module.css
@@ -1,9 +1,16 @@
 .product-list {
     display: flex;
+    justify-content: center;
+
+    width: min(calc(var(--vw) * 100), 100%);
+}
+
+.product-list-width-controller {
+    display: flex;
     flex-direction: column;
     gap: 16px;
 
-    width: 100%;
+    width: min(calc(var(--vw) * 100), 100%);
     max-width: 1280px;
     padding: 16px;
     margin: auto;
