--- a/packages/frontend/src/features/RecommendedProducts/index.module.css
+++ b/packages/frontend/src/features/RecommendedProducts/index.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
 
-    width: calc(var(--vw) * 100);
+    width: min(calc(var(--vw) * 100), 100%);
     padding: 32px 0px;
 }
 
@@ -11,7 +11,8 @@
     flex-direction: column;
     gap: 16px;
 
-    width: min(calc(var(--vw) * 100), 1280px);
+    width: min(calc(var(--vw) * 100), 100%);
+    max-width: 1280px;
     padding: 16px;
     margin: auto;
 
